[package]
name = "metaheuristics"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
publish = false

[dependencies]
eframe = { features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
image = { version = "0.24", default-features = false, features = ["png"] }
rfd = "0.13.0"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_plot = "0.27.2"
